@@ -3,6 +3,7 @@ package com.mercadolibre.sprint1.service.impl;
 import com.fasterxml.jackson.databind.DeserializationFeature;
 import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
 import com.mercadolibre.sprint1.dto.*;
+import com.mercadolibre.sprint1.dto.response.CountProductsPromoDto;
 import com.mercadolibre.sprint1.entity.Post;
 import com.mercadolibre.sprint1.entity.Product;
 import com.mercadolibre.sprint1.entity.User;
@@ -10,15 +11,18 @@ import com.mercadolibre.sprint1.entity.UserFollower;
 import com.mercadolibre.sprint1.exception.BadRequestException;
 import com.mercadolibre.sprint1.exception.NotFoundException;
 import com.mercadolibre.sprint1.repository.IRepository;
+
 import com.mercadolibre.sprint1.repository.impl.PostRepositoryImpl;
-import com.mercadolibre.sprint1.service.IUserService;
+
 import org.springframework.stereotype.Service;
 import com.mercadolibre.sprint1.service.IProductService;
+import com.mercadolibre.sprint1.service.IUserService;
 import com.mercadolibre.sprint1.utils.CResourceUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 
 import java.time.LocalDate;
 import java.util.ArrayList;
+import java.util.Comparator;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -29,6 +33,7 @@ public class ProductServiceImpl implements IProductService {
 
     @Autowired
     private IRepository<Post> postRepository;
+
     @Autowired
     private IRepository<UserFollower> userFollowerRepository;
     @Autowired
@@ -36,21 +41,28 @@ public class ProductServiceImpl implements IProductService {
     @Autowired
     private IUserService userService;
 
+    @Autowired
+    private IUserService userService;
+
     @Override
-    public ProductsFollowedDtoResponse productsOfPeopleFollowed(int id) {
+    public ProductsFollowedDtoResponse productsOfPeopleFollowed(int id, String order) {
         CResourceUtils.MAPPER.disable(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES);
+
+        Comparator<Post> orden= Comparator.comparing(Post::getDate);
+        if (order != null && order.equalsIgnoreCase("date_desc")) {
+            orden = Comparator.comparing(Post::getDate).reversed();
+        }
 
         LocalDate fechaActual = LocalDate.now();
         LocalDate fechaHaceDosSemanas = fechaActual.minusWeeks(2);
-        List<Integer> idUsuarios = new ArrayList<>();
-        idUsuarios = userFollowerRepository.findAll().stream()
+        List<Integer> idUsuarios =  userFollowerRepository.findAll().stream()
                 .filter(entry -> entry.getUserFollower() == id)
                 .map(entry -> MAPPER.convertValue(entry, UserFollowerDto.class))
                 .map(UserFollowerDto::getUserFollowed)
-                .collect(Collectors.toList());
+                .toList();
 
         List<Post> posts = new ArrayList<>();
-        for (Integer usuarios: idUsuarios){
+        for (Integer usuarios : idUsuarios) {
             posts.addAll(filterPostsByUserIds(usuarios));
         }
 
@@ -58,7 +70,7 @@ public class ProductServiceImpl implements IProductService {
                 .filter(entry ->
                         (entry.getDate().isAfter(fechaHaceDosSemanas) || entry.getDate().isEqual(fechaHaceDosSemanas)) &&
                                 (entry.getDate().isBefore(fechaActual) || entry.getDate().isEqual(fechaActual)))
-                .sorted((post1, post2) -> post2.getDate().compareTo(post1.getDate()))
+                .sorted(orden)
                 .map(entry -> {
                     PostDto dto = MAPPER.convertValue(entry, PostDto.class);
                     dto.setId(entry.getId());
@@ -66,8 +78,7 @@ public class ProductServiceImpl implements IProductService {
                 })
                 .toList();
 
-        ProductsFollowedDtoResponse productsFollowedDtoResponse = new ProductsFollowedDtoResponse(id, postDto);
-        return productsFollowedDtoResponse;
+        return new ProductsFollowedDtoResponse(id, postDto);
     }
 
     private List<Post> filterPostsByUserIds(Integer userIds) {
@@ -81,7 +92,7 @@ public class ProductServiceImpl implements IProductService {
         CResourceUtils.MAPPER.registerModule(new JavaTimeModule());
         CResourceUtils.MAPPER.disable(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES);
 
-        if(postPromo != null){
+        if (postPromo != null) {
             Post savedPost = postRepository.save(CResourceUtils.MAPPER.convertValue(postPromo, Post.class));
 
             return "Post guardado";
@@ -95,9 +106,9 @@ public class ProductServiceImpl implements IProductService {
         CResourceUtils.MAPPER.registerModule(new JavaTimeModule());
         CResourceUtils.MAPPER.disable(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES);
 
-        try{
+        try {
             postRepository.save(CResourceUtils.MAPPER.convertValue(newPostDto, Post.class));
-        }catch (Exception e){
+        } catch (Exception e) {
             throw new BadRequestException("El objeto enviado no es correcto");
         }
         return "todo OK";
@@ -125,6 +136,8 @@ public class ProductServiceImpl implements IProductService {
 
             return postPromoListDto;
         }
+      
         throw new NotFoundException("El usuario no es un vendedor");
     }
+
 }
